force-app/main/default/objects/Secondary_Credit_Note__c/fields/Applied_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Debit_Amount__c</fullName>
    <label>Applied Debit Amount</label>
    <summarizedField>Secondary_Credit_Note_Debit_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Secondary_Credit_Note_Debit_Item__c.Secondary_Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>